# cuda-integral

./: CMakeLists.txt  README.md  func1.cfg  func2.cfg  func3.cfg  func4.cfg  main.cpp  readme.md  run.sh  run_cuda_integration.py
include/: functions.h  parse_string.h  riemann_sum_cuda.h  timeMeasurement.h
src/: functions.cpp  functions.cu  parse_string.cpp  riemann_sum_cuda.cu
